--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 
       <div class="container bg-secondary">
         <img src="./assets/images/IMG-0884.JPG" alt="" class="float-left">
-        <p class="float-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam iusto sit eaque? Non
-          earum dolores deserunt consequuntur minima suscipit doloremque, natus neque ea saepe. Sint, nulla est
-          voluptatum laudantium fugiat dolorum repudiandae, a labore eveniet, id accusamus. Reprehenderit dolores
+        <p class="float-left"> I am a former Executive Pastry Chef. I want to combine culinary arts and technology
+          I am excited to take my knowledge as a web developer and apply is to this medium. Future endeavours would include working 
+          with food scientist and securing recipes for multimilliion dollar restaurants. onsectetur adipisicing elit. Id totam iusto sit eaque? Non
+          voluptatum laudantium fugiat doloru m repudiandae, a labore eveniet, id accusamus. Reprehenderit dolores
           maiores quae iste corporis amet dolore iusto praesentium cupiditate id.</p>
         <p class="float-left">Rerum reiciendis mollitia quidem dolores ad minus. Minima nulla aspernatur sequi rerum
           impedit velit consequatur sed aut, incidunt praesentium illo accusantium, cupiditate rem voluptates
